利用模板引擎template优化了页面渲染

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -514,4 +514,18 @@ main {
             }
         }
     }
+    .goods_1{
+        .goods-tit{
+            p{
+                background-position: -86px -86px !important;
+            }
+        }
+    }
+    .goods_2{
+        .goods-tit{
+            p{
+                background-position: -86px -172px !important;
+            }
+        }
+    }
 }
