--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -521,10 +521,52 @@ main {
             }
         }
     }
-    .goods_2{
+    .goods_3{
         .goods-tit{
             p{
                 background-position: -86px -172px !important;
+            }
+        }
+    }
+    .goods_4{
+        .goods-tit{
+            p{
+                background-position: -86px -215px !important;
+            }
+        }
+    }
+    .goods_5{
+        .goods-tit{
+            p{
+                background-position: -86px -258px !important;
+            }
+        }
+    }
+    .goods_6{
+        .goods-tit{
+            p{
+                background-position: -86px -602px !important;
+            }
+        }
+    }
+    .goods_7{
+        .goods-tit{
+            p{
+                background-position: -86px -301px !important;
+            }
+        }
+    }
+    .goods_8{
+        .goods-tit{
+            p{
+                background-position: -86px -344px !important;
+            }
+        }
+    }
+    .goods_9{
+        .goods-tit{
+            p{
+                background-position: -86px -473px !important;
             }
         }
     }
