--- a/src/styles/benlailife.scss
+++ b/src/styles/benlailife.scss
@@ -812,6 +812,23 @@ footer {
         font: 400 12px/38px "Microsoft YaHei";
         color: #fff;
     }
+    .show_goods_msg{
+        position:absolute;
+        right:50px;
+        bottom:124px;
+        width:300px;
+        height:84px;
+        border:1px solid #649a2b;
+        background:#fff;
+        .recover{
+            height:68px;
+            width:4px;
+            background:#fff;
+            position:absolute;
+            right:-2px;
+            top:0;
+        }
+    }
     .zhiCustomBtn {
         background: url(//image.benlailife.com/webStatic/images/gotop_service_d114e897.gif) 0 0 no-repeat;
         height: 70px;
