--- a/src/styles/shopCar.scss
+++ b/src/styles/shopCar.scss
@@ -166,6 +166,18 @@
                     color: #ff9000;
                 }
             }
+            a.delete_goods{
+                display:block;
+                width:40px;
+                height:20px;
+                background:#ff9000;
+                border-radius:5px;
+                text-align:center;
+                margin-left:-7px;
+                &:hover{
+                    color:#fff;
+                }
+            }
         }
     }
     div.Settlement {
