增加了账号状态参数，用户管理中心

--- a/src/styles/benlailife.scss
+++ b/src/styles/benlailife.scss
@@ -16,7 +16,62 @@
 
 #top .topView .top-l-1 {
     float: left;
-    margin-right: 20px;
+}
+
+#top .top-l-1 {
+    dl {
+        position: relative;
+        &:hover {
+            dt {
+                background: url(//image.benlailife.com/webStatic/images/n_top/n_top_ico_e5a1c5b5.png) 112px -13px no-repeat;
+                padding: 0 19px 0 9px;
+                border-left: 1px solid #e8e8e8;
+                border-right: 1px solid #e8e8e8;
+                border-bottom: 0;
+                background-color: #fff;
+                box-shadow: 1px 1px 6px rgba(192, 192, 192, .5);
+                height: 33px;
+            }
+            dd {
+                display: block;
+            }
+        }
+        dt {
+            padding: 0 20px 0 10px;
+            background: url(//image.benlailife.com/webStatic/images/n_top/n_top_ico_e5a1c5b5.png) 112px 13px no-repeat;
+            span {
+                color: #ff6900;
+            }
+        }
+        dd {
+            position: absolute;
+            top: 31px;
+            left: 0;
+            border: 1px solid #e8e8e8;
+            background-color: #fff;
+            box-shadow: 3px 3px 6px rgba(192, 192, 192, .5);
+            padding-bottom: 10px;
+            z-index: 20;
+            width: 272px;
+            text-indent: 20px;
+            display: none;
+            font:700 14px/42px "黑体";
+            s {
+                position: absolute;
+                width: 124px;
+                height: 4px;
+                left: 0;
+                top: -2px;
+                background: #fff;
+            }
+            em {
+                float: right;
+                color: #90b42f;
+                margin-right: 20px;
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 #top .topView .top-l-1 a {
@@ -26,6 +81,7 @@
 
 #top .topView .top-l-2 {
     float: left;
+    margin-left: 10px;
     padding-left: 34px;
     background: url(../static/images/index_top.png) 0 -43px no-repeat;
 }
@@ -264,7 +320,7 @@ header {
                     }
                     ul {
                         max-height: 400px;
-                        overflow-y:auto;
+                        overflow-y: auto;
                         li {
                             height: 60px;
                             margin: 10px 0;
@@ -309,13 +365,13 @@ header {
                     .tobuy {
                         border-top: 1px solid #e5e5e5;
                         margin-top: 10px;
-                        text-align:right;
+                        text-align: right;
                         p {
                             font: 400 12px/50px "Microsoft YaHei";
                             color: #3e4141;
                             em {
                                 display: inline-block;
-                                width:100px;
+                                width: 100px;
                                 s {
                                     color: #ff6900;
                                     padding: 0 5px;
@@ -324,10 +380,10 @@ header {
                                 }
                             }
                             span {
-                                text-align:left;
-                                display:inline-block;
-                                width:125px;
-                                height:50px;
+                                text-align: left;
+                                display: inline-block;
+                                width: 125px;
+                                height: 50px;
                                 i {
                                     color: #ff6900;
                                     padding: 0 5px;
@@ -343,7 +399,7 @@ header {
                             text-align: center;
                             background-color: #ff6900;
                             display: inline-block;
-                            padding:0;
+                            padding: 0;
                             cursor: pointer;
                         }
                     }
