--- a/src/styles/userHome.scss
+++ b/src/styles/userHome.scss
@@ -107,7 +107,11 @@ nav {
                     text-align: right;
                 }
                 .p11_t{
-                    width:350px;
+                    width:650px;
+                    .tips{
+                        padding:0 20px;
+                        color:#f00;
+                    }
                 }
                 .an{
                     color: #763e02 !important;
@@ -118,6 +122,19 @@ nav {
                     line-height: 12px;
                     margin-left: 5px;
                     cursor: pointer;
+                }
+            }
+        }
+        .save_user_info{
+            a{
+                padding:5px 10px;
+                background:#763e02;
+                opacity:.9;
+                margin-left:130px;
+                border-radius:5px;
+                cursor: pointer;
+                &:hover{
+                    opacity:.7;
                 }
             }
         }
