新增活动页

--- a/src/styles/benlailife.scss
+++ b/src/styles/benlailife.scss
@@ -1227,3 +1227,22 @@ footer {
         }
     }
 }
+#to_active{
+    position: fixed;
+    left:0;
+    bottom:0;
+    z-index: 120;
+    .box{
+        a{
+            img{
+                width:300px;
+            }
+        }
+    }
+    >img{
+        position: absolute;
+        right:0;
+        top:0;
+        cursor: pointer;
+    }
+}
